@startuml User Management System

' Define packages
package "User Management" {
    class User {
        +id: int
        +first_name: string
        +last_name: string
        +email: string
        +password: string
        +role_id: int
        +is_instructor: boolean
        +social_links: json
        +biography: text
        +phone: string
        +address: text
        +date_added: timestamp
        +wishlist: json
        +status: int
        +image: string
        +payment_keys: json
    }

    class Permission {
        +admin_id: int
        +permissions: json
    }

    class Role {
        +id: int
        +name: string
        +description: text
    }
}

' Define relationships
User "1" -- "1" Permission : has >
User "1" -- "1" Role : belongs to >

' Define enums
enum UserStatus {
    ACTIVE
    INACTIVE
    SUSPENDED
}

enum UserRole {
    ADMINISTRATOR
    STUDENT
    INSTRUCTOR
}

' Add notes
note right of User
  Handles user authentication,
  authorization, and profile
  management
end note

note right of Permission
  Stores role-based
  permissions for
  administrators
end note

@enduml 